# crm-notes

./: .gitignore  EXPORT_IMPORT_GUIDE.md  QUICKSTART.md  README.md  SUMMARY.md  backup_db.sh  contact_card.json  contact_template.yaml  contacts.db  database.py  export_contact.py  import_contact.py  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  start.sh
exports/: axel_bobin.yaml  marie_backup.yaml
static/: app.js  styles.css
templates/: index.html
