[project]
name = "crm-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "jinja2==3.1.3",
    "litecli>=1.17.0",
    "pydantic==2.5.3",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "uvicorn[standard]==0.27.0",
]
